Starting to add GraphQL demo

--- a/contenfulsyncapi/contenfulsyncapi.csproj
+++ b/contenfulsyncapi/contenfulsyncapi.csproj
@@ -24,11 +24,15 @@
     <None Remove="ViewModel\" />
     <None Remove="contentful.csharp" />
     <None Remove="Control\" />
+    <None Remove="Model\" />
+    <None Remove="Util\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Dto\" />
     <Folder Include="Dto\DB\" />
     <Folder Include="ViewModel\" />
     <Folder Include="Control\" />
+    <Folder Include="Model\" />
+    <Folder Include="Util\" />
   </ItemGroup>
 </Project>
