--- a/contenfulsyncapi/contenfulsyncapi.csproj
+++ b/contenfulsyncapi/contenfulsyncapi.csproj
@@ -14,7 +14,8 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2244" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="contentful.csharp" Version="7.0.0" />
+    <PackageReference Include="contentful.csharp" Version="7.0.1" />
+    <PackageReference Include="MonkeyCache.FileStore" Version="1.5.2" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Newtonsoft.Json" />
@@ -26,6 +27,7 @@
     <None Remove="Control\" />
     <None Remove="Model\" />
     <None Remove="Util\" />
+    <None Remove="MonkeyCache.FileStore" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Dto\" />
